
syntax="proto3";

option go_package = "genproto/manager_service";

package manager_service;

service ManagerStudentService {
    rpc CreateStudent(CreateManagerStudent) returns (ManagerStudent) {}
    rpc GetStudentByID(ManagerStudentPrimaryKey) returns (ManagerStudent) {}
    rpc GetAllStudents(GetListManagerStudentRequest) returns (GetListManagerStudentResponse) {}
    rpc UpdateStudent(UpdateManagerStudent) returns (ManagerStudent) {}
    rpc DeleteStudent(ManagerStudentPrimaryKey) returns (ManagerStudentPrimaryKey) {}
}


message ManagerStudentPrimaryKey {
    string id = 1;
}

message CreateManagerStudent {
    string first_name = 1;
    string last_name = 2;
    string phone = 3;
    string password = 4;
    string group_id = 5;
    string journal = 6;

}

message ManagerStudent {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone = 4;
    string password = 5;
    string created_at = 6;
    string group_id = 7;
    string updated_at = 8;
    int64 role_id = 9;
    string login =10;

}

message UpdateManagerStudent {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone = 4;
    string password = 5;
    string group_id = 6;
}

message GetListManagerStudentRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListManagerStudentResponse {
    int64 count = 1;
    repeated ManagerStudent manager_students = 2;
}